[package]
name = "signal_generator"
version = "0.1.0"
authors = ["miskolee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.0"
rand="*"
rand_distr="*"
rand_xorshift="*"
plotters-cairo = "0.3.1"
cairo-rs = "^0.9"
gtk = "^0.9"
gio ="^0.9"
dsp = "0.8.1"
glib="*"
chrono="*"